<resources>
    <string name="app_name">My Application</string>
    <string name="microphone">microphone</string>
    <string name="menu">菜单</string>
    <string name="hello">早上好！</string>
    <string name="switch_room">切换房间</string>
    <string name="options">options</string>
    <string name="switch_icon">switch_icon</string>
    <string name="shared_toolbar">shared_toolbar</string>
    <string name="transition_home_toolbar">transition_home_toolbar</string>
    <string name="transition_room_toolbar">transition_room_toolbar</string>
    <string name="home_fragment_tag">home_fragment_tag</string>
    <string name="room_fragment_tag">room_fragment_tag</string>
    <string name="temperature_unit">℃</string>
    <string name="power_button">power_button</string>
    <string name="temperature">温度</string>
    <string name="turn_up">turn up</string>
    <string name="turn_down">turn down</string>
    <string name="weather_icon">weather_icon</string>
    <string name="home">主页</string>
    <string name="search">查找</string>
    <string name="help">帮助</string>
    <string name="account">账号</string>
    <string name="login">登录</string>
    <string name="cancel">返回</string>
</resources>