<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:transitionName="@string/transition_home_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:navigationIconTint="@color/on_background"
                app:navigationIcon="@drawable/outline_menu_24" />
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/text_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar_layout" />

        <androidx.cardview.widget.CardView
            android:id="@+id/weather_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dp_16"
            android:outlineAmbientShadowColor="@color/surface"
            app:cardBackgroundColor="@color/surface"
            app:cardCornerRadius="@dimen/dp_16"
            app:cardElevation="@dimen/dp_16"
            app:contentPadding="@dimen/dp_8"
            app:layout_constraintBottom_toTopOf="@id/center_horizontal_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_hello"
            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintWidth_percent="0.8">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/weather_icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/weather_icon" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/weather_text"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/on_surface" />
                    <TextView
                        android:id="@+id/weather_wind"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/on_surface" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center_horizontal_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.28" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/center_horizontal_guideline"
            app:layout_constraintVertical_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/pager_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/switch_room"
                    android:backgroundTint="@color/root_background"
                    app:tabBackground="@null"
                    app:tabGravity="center"
                    app:tabIndicatorFullWidth="false"
                    app:tabMode="scrollable"
                    app:tabRippleColor="@null"
                    app:tabSelectedTextColor="@color/on_background"
                    app:tabTextColor="@color/on_background_light" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/controller_pager"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
